# accountant

./: .gitignore  CMakeLists.txt
src/: appController.cpp  appController.h  main.cpp
tests/: appControllerTests.cpp
